gdk: Allow drawable == NULL in gdk_pixmap_create_from_data() again

client-side windows introduced a function that assumed a non-NULL
drawable. This call needs to be special-cased to restore functionality
from before.

https://bugzilla.gnome.org/show_bug.cgi?id=631332