gdk/gdkpixmap.c
@@ -275,7 +275,10 @@ gdk_pixmap_create_from_data (GdkDrawable    *drawable,
 {
   GdkDrawable *source_drawable;
 
-  source_drawable = _gdk_drawable_get_source_drawable (drawable);
+  if (drawable)
+    source_drawable = _gdk_drawable_get_source_drawable (drawable);
+  else
+    source_drawable = NULL;
   return _gdk_pixmap_create_from_data (source_drawable,
                                        data, width, height,
                                        depth, fg,bg);
